--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -528,7 +528,7 @@ date: 2021-05-01 05:01:01
 
 ### N015
 
-> 这个女生年级也不过三十,皮肤微黑微红，面庞消瘦。樱桃小嘴很是红软，若是面色再红润一些那就跟家美丽不过了，不过那双脸蛋确实很好看。一双桃核眼，有些黑眼圈，眉毛修整的细长。整个五官很是协调。长长的头发，从中间分开，乌黑发亮。身材也很高，整个身体都十分苗条，可惜肤色稍带黑暗。胸部不是很发达，臀部有些宽，腰部不是很细，这点上有些遗憾。 整体来说也是那种长相美好的女子了。
+> 这个女生年级也不过三十,瓜子脸十分瘦长，皮肤微黑微红，面庞消瘦。樱桃小嘴很是红软，若是面色再红润一些那就跟家美丽不过了，不过那双脸蛋确实很好看。鼻子窄而高，很像西方混血美女。一双桃核眼，有些黑眼圈，眉毛修整的细长。整个五官很是协调。长长的头发，从中间分开，乌黑发亮。身材也很高，整个身体都十分苗条，可惜肤色稍带黑暗。整体身材苗条，两手纤细，胸部不是很发达，臀部有些宽，腰部不是很细，这点上有些遗憾。 整体来说也是那种长相美好的女子了。
 
 ## 评论合集
 
