--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -475,6 +475,8 @@ date: 2021-05-01 05:01:01
 
 > 这个女人已经出现在这里好多月了，自从到了这里一直沉默寡言，她喜欢穿黑色，黑色上衣，黑色裙子，黑色丝袜，黑色皮鞋不晓得有几双，甚至连眼睛都是黑色镜框。她身形饱满，胸脯白嫩，皮肤细腻，像牛奶洗过似的。偶尔见她从身旁走过，总是很轻，一点声音也没有。我曾经细致的看过她的脸，眼睛很大，圆圆的，鼻子嘴巴虽不甚美，但是整体上来看却有一种的成熟少妇之美。她之前似乎每天都来，基本上坐相近的位置，而这几天偶尔就没看到她，不知道是有事没来，还是坐到其他位置去了。
 
+> 最近又再次见到此女子，戴一定花毛线编织帽，红色紧身羽绒服，依然是那个长发，但是年龄看起来也就20左右。唉，看来我对年龄的把握是在是不够准确，脸盲嘞。
+
 ### NO2,年轻女职员
 
 > 这个女职员个字不高，臀部微宽，身材虽不苗条，但是却觉察不出来胖，别有一番风韵。不经意间看过去，只见她面带微笑似桃花，鼻子比较高挺，脸蛋圆圆得很可爱。他是一头长发，却扎起长长的辫子简单而不失青春，头上别着一把小发卡。辫子有些卷，微黄，应该是染过了吧。不能走近看，所以看不出来是什么样子的。她总是习惯穿一身工装，上身浅色短袖，胸口的兜兜上别着工牌，下身蓝色的裤子，穿一双白色的运动鞋，显得特别有精神。她工作认真，细致，偶尔瞟她一眼就会发现他正在仔细地校对，偶尔她闲着的时候也会拿本书去边上静静地阅读，不知道她看的什么书，应该是小说一类的吧。
