--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -29,7 +29,7 @@ date: 2021-05-01 05:01:01
 - [2022年冬天的第一场雪](#2022年冬天的第一场雪)
 - [李氏戒己书](#李氏戒己书)
 - [李氏戒子书](#李氏戒子书)
-- [登华山记（未完）](#登华山记未完)
+- [生活随记](#生活随记)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -463,7 +463,25 @@ date: 2021-05-01 05:01:01
 
 >  多读书，儒家十三经，二十五史，资治通鉴需认真研读，吾家已有。
 
-## 登华山记（未完）
+## 生活随记
+
+> 2023-03-03 记
+
+> 最近家庭开销很大，颇感生活艰难。这或许就是圣人所说的让百姓日夜勤作，生死疲倦吧。
+
+> 现在很是怀念农村的生活，人心淳朴，日出而作，日落而休。生活简单但是充实，老婆孩子热炕头，也不用操心太多的事情。农村的空气也好，不知为何现在都往城里挤。
+
+> 城市里鸽子笼一般的生活不过是自己把自己圈到了这个大笼子。城市的花红酒绿，霓虹灯艳，那不过是一层虚伪的外表。其内心充满黑暗和肮脏。
+
+> 城市的空气水都受到严重污染，已经看到好多水体污染，每天经过的路口距离污水厂近，那股气味实在太难闻了。上周末，未央宫边上地下污水管道坏掉了，污水瞒过整条街道，那气味是在太难闻了。最近空气中的灰尘也很大，如果不戴口罩在路边站一阵就会特别的难受。
+
+> 城市的人口密集，病毒很容易迅速传播。最近不知道什么病毒，又传播的到处都是，老人孩子都生病了。每次生病也都是一笔不小的开销。
+
+> 人们之间尔虞我诈，狡诈控制他人的被视为圣人，欺诈压迫他人的被当做成功人士。
+
+> 城市里到处是监控，自由已经无处觅踪。网络上也没有什么隐私，也没有什么自由。自由没有，实名制带来的网络诈骗实在危害太大。
+
+> 对于老百姓来说，平淡才是最好的日子，但是这不正是农村生活的样子吗？城市生活已经让越来越多的人厌倦和疲劳。
 
 ## 芸芸众生
 
