--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -27,9 +27,10 @@ date: 2021-05-01 05:01:01
 - [接娃记](#接娃记)
 - [关中地区的塬成因简析](#关中地区的塬成因简析)
 - [2022年冬天的第一场雪](#2022年冬天的第一场雪)
-- [李氏戒己书](#李氏戒己书)
-- [李氏戒子书](#李氏戒子书)
+- [李氏家训](#李氏家训)
 - [生活随记](#生活随记)
+- [什么叫良史官](#什么叫良史官)
+- [你](#你)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -185,25 +186,25 @@ date: 2021-05-01 05:01:01
 
 > 2021-05-01 05:01:01
 
->  函谷关（东汉后为潼关搜所代），西大散关，南武关，北萧关，关中沃野千里，天府之国也。其实你要仔细考证的话，四关之中的说法是靠不住的，比如说大散关是汉以后才设置的，但是关中的说法是来自己战国时期，大概是以秦关为界，东方六国为关外，而秦为关中。当然了真实的关中来自那个关不好考证了，然则当今以四关之中而名则又成立，所以也不必纠结这个问题了。唐以前被历代帝王所重，中国历史强盛的周秦汉唐均已此为都。自唐以后逐渐废弃，但也是西部重镇。宋太祖，明太祖均有意移都长安。后民国在长安设立西京。解放长安一度为直辖市。
+> 函谷关（东汉后为潼关搜所代），西大散关，南武关，北萧关，关中沃野千里，天府之国也。其实你要仔细考证的话，四关之中的说法是靠不住的，比如说大散关是汉以后才设置的，但是关中的说法是来自己战国时期，大概是以秦关为界，东方六国为关外，而秦为关中。当然了真实的关中来自那个关不好考证了，然则当今以四关之中而名则又成立，所以也不必纠结这个问题了。唐以前被历代帝王所重，中国历史强盛的周秦汉唐均已此为都。自唐以后逐渐废弃，但也是西部重镇。宋太祖，明太祖均有意移都长安。后民国在长安设立西京。解放长安一度为直辖市。
 
->  历史上关中地区在有些王朝的末世关中百姓惨遭屠杀，还有就是民国，解放后的饥荒时期，其他时期关中的形式整体上比其他地区要好些。历史上很长一段时间，关中人具有比其他地方人更多的优胜感，而近百年关中经济逐渐落后其他地区，导致了关中人的失落感，这也孕育了关中人独特的性格。
+> 历史上关中地区在有些王朝的末世关中百姓惨遭屠杀，还有就是民国，解放后的饥荒时期，其他时期关中的形式整体上比其他地区要好些。历史上很长一段时间，关中人具有比其他地方人更多的优胜感，而近百年关中经济逐渐落后其他地区，导致了关中人的失落感，这也孕育了关中人独特的性格。
 
->  朴实本分，守着自己的一亩三分田。关中人宁愿饿死在自己地里也不愿流浪，以前关中也出现了几次大灾荒，饿死了不少人，但是很少人跑到外省去讨饭的，这点上我是深有体会。以前村子里经常有外省人来村子里乞讨卖艺，家里人就会给点粮食，给点镆什么的。
+> 朴实本分，守着自己的一亩三分田。关中人宁愿饿死在自己地里也不愿流浪，以前关中也出现了几次大灾荒，饿死了不少人，但是很少人跑到外省去讨饭的，这点上我是深有体会。以前村子里经常有外省人来村子里乞讨卖艺，家里人就会给点粮食，给点镆什么的。
 
->  首先是关中人爱看热闹，身边发生点什么事，一群人就湊上去看。小时候村子里谁家两口子或两邻居吵架，周围的人就围着看，还给支招，结果吵着吵，吵架的人反倒很尴尬，就不了了之了。
+> 首先是关中人爱看热闹，身边发生点什么事，一群人就湊上去看。小时候村子里谁家两口子或两邻居吵架，周围的人就围着看，还给支招，结果吵着吵，吵架的人反倒很尴尬，就不了了之了。
 
->  关中人直接发生争执，很少动手的，哪怕装作动手，口上嗓门喊的老大，也只是希望边上的人拉，边上看热闹的也会会意。这大概是君子 动口不动手的传统吧。
+> 关中人直接发生争执，很少动手的，哪怕装作动手，口上嗓门喊的老大，也只是希望边上的人拉，边上看热闹的也会会意。这大概是君子 动口不动手的传统吧。
 
->  关中人爱吹牛，宝鸡话叫爱卖排。历史上或者祖上要是有厉害的人都会吹上几辈子。以前家里出个大学生吹，买个大点家具也爱跟人吹。除了爱吹还爱听人夸自己，夸的越厉害越舒坦。
+> 关中人爱吹牛，宝鸡话叫爱卖排。历史上或者祖上要是有厉害的人都会吹上几辈子。以前家里出个大学生吹，买个大点家具也爱跟人吹。除了爱吹还爱听人夸自己，夸的越厉害越舒坦。
 
->  关中人守旧，这也导致许多对关中人的片面的看法，有些人说关中人懒，这其实就是守旧的片面看法。
+> 关中人守旧，这也导致许多对关中人的片面的看法，有些人说关中人懒，这其实就是守旧的片面看法。
 
->  关中人爱吃面，尤其是油泼面，辣子一定要放的多。尤其是众多的面食，臊子面，biangbiang面,牛羊肉泡等。
+> 关中人爱吃面，尤其是油泼面，辣子一定要放的多。尤其是众多的面食，臊子面，biangbiang面,牛羊肉泡等。
 
->  关中人爱说“站着累，坐着窝，圪蹴休息最受活。”爱蹲是关中一怪，这里面有传统，有习惯，更有落后贫穷的历史因素。
+> 关中人爱说“站着累，坐着窝，圪蹴休息最受活。”爱蹲是关中一怪，这里面有传统，有习惯，更有落后贫穷的历史因素。
 
->  随着近几年在西安带动下关中的经济蓬勃发展。关中人实实在在的发生着变化。比如饮食这块，现在关中的饮食非常丰富，八大菜系都在关中城市分布广泛。
+> 随着近几年在西安带动下关中的经济蓬勃发展。关中人实实在在的发生着变化。比如饮食这块，现在关中的饮食非常丰富，八大菜系都在关中城市分布广泛。
 
 ## 告天下父母书
 
@@ -439,29 +440,36 @@ date: 2021-05-01 05:01:01
 
 > 第二天一大早想欣赏一下这雪景，结果今日却是个大晴天。不过院子中还有一些残雪，小区的人工湖里已经冻上了一层厚厚的冰。哎，今年的冬天一下子就变得寒冷了起来！
 
-## 李氏戒己书
+## 李氏家训
 
->  饮食清单，生活简朴。
+> 饮食清单，生活简朴，勿贪。
 
->  多读书，尤其史书，经典。
+> 多读书，尤其史书，经典。儒家十三经，二十五史，资治通鉴需认真研读，吾家已有，当精读。除儒家外老庄亦需熟读。
 
->  自我克制，控制情绪。
+> 自我克制，控制情绪。
 
->  善虽小而行之，恶虽小而不行。
+> 不造假。
 
->  注意形象，自我表率。
+> 我论人之过。
 
->  自我修养,为子女作表率。
+> 善虽小而行之，恶虽小而不行。
 
->  己所不能不强求于子女。
+> 注意形象，自我表率。
 
->  子女有错，善教导之。
+> 自我修养,为子女作表率。
 
-## 李氏戒子书
+> 己所不能不强求于子女。
 
->  行得正坐得端，走路站立需正，写字坐着需端正。与人真诚，不欺骗别人。
+> 子女有错，善教导之。
 
->  多读书，儒家十三经，二十五史，资治通鉴需认真研读，吾家已有。
+> 勤能补拙，勤为善之先。
+
+> 行得正坐得端，走路站立需正，写字坐着需端正。与人真诚，不欺骗别人。
+
+
+> 生活中遇到困难并不怕，及时寻求办法解决，遇到错误及时改正。
+
+> 行事光明正大，见得了光。
 
 ## 生活随记
 
@@ -484,6 +492,28 @@ date: 2021-05-01 05:01:01
 > 对于老百姓来说，平淡才是最好的日子，但是这不正是农村生活的样子吗？城市生活已经让越来越多的人厌倦和疲劳。
 
 > 非“天地以万物为刍狗”，实乃成功者以不成功者为“刍狗”。 
+
+## 什么叫良史官
+
+> 不溢美，不隐恶。也就是说要善恶分明，但也不能过分描述。因此，孔子，董狐是也。孔子著春秋，
+
+> 司马迁，班固等则对其喜欢的人褒美之辞表露于文，班氏亦然。所以后人对《史》《汉》褒贬不一。
+
+> 后世史家则更甚。多对帝王的恶性予以隐，而小功则大褒美。四史之后多对帝王将相大加赞赏，美化。这大概就是为什么前四史更加受欢迎，其词藻繁华太甚。而春秋言简意赅，微言大义，读者则鲜矣。
+
+## 你
+
+> 有一种女子是那种让人一见倾心的那种，或者叫一见钟情，你就是我心中那样的女子。第一次和你目视就被你的眼神所触动。你那明眸让人深深动情。
+
+> 起先只是偶尔侧目观察你，慢慢的视野时不时的就要搜寻你。见不到的时候也常在心中思念。
+
+> 你工作的样子十分美丽，一丝不苟的，静静的。
+
+> 每天希望看到你，只是看到即可，看到你的样子，看到你工作的样子。
+
+> 今天女神节，别的女生多休假去了，而你却依然在辛勤工作。
+
+> 可惜这种感情只能深藏在心中，不能表述出来。内心里也是希望你好，能有个好的归宿，那样我也会十分欢喜。
 
 ## 芸芸众生
 
