--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -507,11 +507,11 @@ date: 2021-05-01 05:01:01
 
 > 起先只是偶尔侧目观察你，慢慢的视野时不时的就要搜寻你。见不到的时候也常在心中思念。
 
-> 你工作的样子十分美丽，一丝不苟的，静静的。
+> 你工作的样子十分美丽，一丝不苟的，静静的。有时候看你发呆也是一番别样的感觉。
 
-> 每天希望看到你，只是看到即可，看到你的样子，看到你工作的样子。
+> 每天希望看到你，只是看到即可，看到你的样子，看到你工作的样子。尤其是你头戴小发卡，实在让人不能忘记。
 
-> 今天女神节，别的女生多休假去了，而你却依然在辛勤工作。
+> 今天女神节，别的女生多休假去了，而你却依然在辛勤工作，一直到很晚。
 
 > 可惜这种感情只能深藏在心中，不能表述出来。内心里也是希望你好，能有个好的归宿，那样我也会十分欢喜。
 
