--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -31,6 +31,8 @@ date: 2021-05-01 05:01:01
 - [生活随记](#生活随记)
 - [什么叫良史官](#什么叫良史官)
 - [你](#你)
+- [沣河生态公园春游记](#沣河生态公园春游记)
+- [忆幼时的杨柳笛声](#忆幼时的杨柳笛声)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -514,6 +516,44 @@ date: 2021-05-01 05:01:01
 > 今天女神节，别的女生多休假去了，而你却依然在辛勤工作，一直到很晚。
 
 > 可惜这种感情只能深藏在心中，不能表述出来。内心里也是希望你好，能有个好的归宿，那样我也会十分欢喜。
+
+## 沣河生态公园春游记
+
+> 2023-03-12
+
+> 除去前日西安普降沙尘宝，空气极为恶劣。12日又是一个大晴天，天气也不错，还是周日。等孩子把作业写完，吃过午饭之后便带着娃出去湾。
+
+> 随机的就想想着去沣河边玩玩，没想到一路车子十分堵。可能大家都觉得这个天气是不错的出行日吧，因此齐刷刷的就堵在路上了。
+
+> 到了沣河生态公园的时候已经接近下午3点了。自然车辆也很多，停车场满载，很不容易等了一会，进到了停车场，停好了车子就带着孩子进去公园了。
+
+> 这个公园有许多草地，正直初春，天气暖和，草开始变绿。草地上到处是玩耍的孩子，还有许多五颜六色的帐篷。大人们则围在一起，吃着东西，聊着天。孩子们则自由的在边上奔跑。也有人在放风筝，天上也飘了不少风筝。当然了，绿岛上也是闲散的人或者运动健身的。
+
+> 我们沿着绿道往南走，欣赏着这春日的景色，沣河水变得十分清澈，南边的秦岭也变得更青了。两旁的柳树已经长满了嫩芽。还有一些桃树，杏树之类的开满了各色的花朵，景象十分美丽。不少的游人在这些花边上拍照留影。我也给孩子在一处花树边上拍了些照片。
+
+> 一路玩耍，一路向南走去。 孩子见到一些玩耍的台子就要停留下来玩。我们就这样磨蹭了一些时光。后来妻子和女儿走不动了，我就让他们在边上找个地方休息。我带着孩子继续向南边走。我们边走边欣赏这公园里的镜像。儿子时不时的拔一把草，摘一朵花，闻一闻，嗅一嗅。
+
+> 这个公园并未完全建成，里边还有好多设施正在建设，有些店铺之类的也正在装修。里边也有一些工人正在浇水，喷洒农药。但是因为周边没有什么工厂，所以环境比较原生态，尤其是绿道，特别适合跑步。还有几处白杨林，挺拔秀丽，中间还有一些走廊，行走在上面特别惬意。有时候一阵风吹过，听着白杨树发出的声音让人感觉特别惬意。
+
+> 公园并不大，我们很快就走到头了，在尽头玩了一阵，就继续向北走去。公园还有不少人不知道从那里挖到一些野菜，荠荠菜之类的，正坐在路边的凳子上择菜。我们继续寻找妻子和女儿，她们正在一处亭子下玩手机，我不喜欢孩子玩手机，就带着女儿在草地上玩了会。
+
+> 时光飞逝，天渐渐变黑，我们也不得不带上孩子往回走了，孩子们还有点依依不舍。
+
+## 忆幼时的杨柳笛声
+
+> 2023-03-14
+
+> 幼时一直在农村待着，也没什么可玩的，所以那时候的玩艺儿基本都是自己手工制作。那日路过一棵柳树，发现柳条柔弱随意折了一根，居然制成了小时后经常玩的柳笛。吹了一下，那童年熟悉的声音又飘荡在耳前。
+
+> 这种乐器我们小时候称呼为“筒筒”。旧时，春季，我们便去找各种树枝，制作这种乐器，首选，杨树，柳树，还有那种构树也可以。尤其那个构树制作的更好一些。这个树枝也不能是采的太早，也不能太晚，依然发芽了之后基本就没发用了，太早则皮还没有离。
+
+> 有了树枝后，制作这种笛子也是很简单的。用手慢慢转，让皮和枝完整的分离，然后把中间的杆抽出来，如果发了芽的，抽的时候会把皮割破，也就没什么用了。皮取出来后就成了一根长长的管子，用小刀把两头裁割齐整。在一段用手轻轻的扣掉表面的深色外皮，然后把这端塞在嘴里吹就可以发出清脆嘹亮的笛声。
+
+> 过去还有说法，这种笛子不能在家里吹，如果在家里吹会把蝎子招到家里了。所以我们还真就当真了，在家里从来不吹这种笛子。
+
+> 那时候一到春天时节，我们就找各种指条。每个小朋友都制作上一大堆这种乐器，长的短的，粗的细的。到处都是这种笛声，热闹非凡。大家每人制作上好多这种笛子，吹得热闹非凡。
+
+> 如今我又吹响了这种笛声，但是我那童年的小伙伴们却已分散四方。听着笛声，很想念那些童年的伙伴和生活。独自在这城市中，感觉有些孤单，不知道那些小伙伴都过得好不好。
 
 ## 芸芸众生
 
