--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -30,9 +30,10 @@ date: 2021-05-01 05:01:01
 - [李氏家训](#李氏家训)
 - [生活随记](#生活随记)
 - [什么叫良史官](#什么叫良史官)
-- [你](#你)
+- [她](#她)
 - [沣河生态公园春游记](#沣河生态公园春游记)
 - [忆幼时的杨柳笛声](#忆幼时的杨柳笛声)
+- [杂记2023-03-15](#杂记2023-03-15)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -503,19 +504,19 @@ date: 2021-05-01 05:01:01
 
 > 后世史家则更甚。多对帝王的恶性予以隐，而小功则大褒美。四史之后多对帝王将相大加赞赏，美化。这大概就是为什么前四史更加受欢迎，其词藻繁华太甚。而春秋言简意赅，微言大义，读者则鲜矣。
 
-## 你
+## 她
 
-> 有一种女子是那种让人一见倾心的那种，或者叫一见钟情，你就是我心中那样的女子。第一次和你目视就被你的眼神所触动。你那明眸让人深深动情。
+> 有一种女子是那种让人一见倾心的那种，或者叫一见钟情，她就是我心中那样的女子。第一次和她目视就被你的眼神所触动。她那明眸让人深深动情。
 
-> 起先只是偶尔侧目观察你，慢慢的视野时不时的就要搜寻你。见不到的时候也常在心中思念。
+> 起先只是偶尔侧目观察她，慢慢的视野时不时的就要搜寻她。见不到的时候也常在心中思念。
 
-> 你工作的样子十分美丽，一丝不苟的，静静的。有时候看你发呆也是一番别样的感觉。
+> 她工作的样子十分美丽，一丝不苟的，静静的。有时候看她发呆也是一番别样的感觉。
 
-> 每天希望看到你，只是看到即可，看到你的样子，看到你工作的样子。尤其是你头戴小发卡，实在让人不能忘记。
+> 每天希望看到她，只是看到即可，看到她的样子，看到她工作的样子。尤其是她头戴小发卡，实在让人不能忘记。
 
-> 今天女神节，别的女生多休假去了，而你却依然在辛勤工作，一直到很晚。
+> 那天女神节，别的女生多休假去了，而她却依然在辛勤工作，一直到很晚。
 
-> 可惜这种感情只能深藏在心中，不能表述出来。内心里也是希望你好，能有个好的归宿，那样我也会十分欢喜。
+> 对她总有千万的思想，但是只能深藏心间，化作思量。这种感情只能深藏在心中，不能表述出来。内心里也是希望她好，能有个好的归宿，那样我也会十分欢喜。
 
 ## 沣河生态公园春游记
 
@@ -554,6 +555,12 @@ date: 2021-05-01 05:01:01
 > 那时候一到春天时节，我们就找各种指条。每个小朋友都制作上一大堆这种乐器，长的短的，粗的细的。到处都是这种笛声，热闹非凡。大家每人制作上好多这种笛子，吹得热闹非凡。
 
 > 如今我又吹响了这种笛声，但是我那童年的小伙伴们却已分散四方。听着笛声，很想念那些童年的伙伴和生活。独自在这城市中，感觉有些孤单，不知道那些小伙伴都过得好不好。
+
+## 杂记2023-03-15
+
+> 最近国际形式不太理想，我国已经跌为美国第四大贸易伙伴，但是老爷们似乎还没有感觉到威胁。似乎要嚷嚷着跟世界推规。我国在明清时就以天朝上国自居，结果落得个落后挨打。闭关自守，与世界科学技术逐渐拉开距离了。近几十年经济科技实力稍微有所好转，有些老爷们就开始自大起来。明清的历史去我们尚未远，却已经不被人所鉴了，难怪历史的车轮不断滚滚转转，谁也摆脱不了被碾压的命运。美国人对于我国的芯片领域封杀，是及其厉害的一招，有着打中七寸之危。但是我们是吹吹牛，几年之内就能比肩人家，老爷们也想想了。如今距离吹过的牛也已好几年了，芯片技术还是感觉没有什么进步。当官那么好的，吃香喝辣的，谁会愿意去作这份苦差事？但是“学而优则仕”这种理念很难被打破了，我民族似乎只有在危难当头才会想到科技救国，不然就是诗书礼乐。真的是难难难。
+
+> 最近有种感觉，中美之间五年之内似乎要有一场决战了。老爷们享了几十年清平盛世，军队只是磨刀，谁有知道这倒利不利，反正国人看着倒是挺亮的，明晃晃有些瘆人。美国人的战争意识真的是太明显了，老爷们似乎还没有感觉出来。美国佬从小战争打起，把周边的效果修理了一圈。况且这两年我国在国际上也已经没什么朋友，只俄罗斯，朝鲜这种二，三流国家。形势十分危急矣。
 
 ## 芸芸众生
 
