--- a/_posts/2023-01-03-TVBoxs.md
+++ b/_posts/2023-01-03-TVBoxs.md
@@ -5,6 +5,67 @@ description: Amlogic设备等电视盒子的研究包括Arm架构的Armbian，Op
 date: 2023-01-02 15:43:01
 ---
 
+- [常见的Amlogic设备](#常见的amlogic设备)
+- [咪咕MGV3000研究](#咪咕mgv3000研究)
+  - [刷机教程：](#刷机教程)
+  - [固件下载链接：](#固件下载链接)
+  - [DiskInitial命令出错 问题解决](#diskinitial命令出错-问题解决)
+  - [hdmi短接器厂家给的意见](#hdmi短接器厂家给的意见)
+- [咪咕MGV3200研究 GK6323芯片](#咪咕mgv3200研究-gk6323芯片)
+  - [ADB 卡刷](#adb-卡刷)
+  - [通过ADB修改DNS](#通过adb修改dns)
+- [Root android 9](#root-android-9)
+  - [Root Android 9.0 via Magisk](#root-android-90-via-magisk)
+  - [Root Android 9.0 via Magisk Manager](#root-android-90-via-magisk-manager)
+  - [Root Android 9.0 via SuperSU](#root-android-90-via-supersu)
+  - [Root Android 9.0 via KingoRoot](#root-android-90-via-kingoroot)
+    - [Root Android 9.0 via KingoRoot Android App](#root-android-90-via-kingoroot-android-app)
+    - [Root Android 9.0 via KingoRoot Windows Application](#root-android-90-via-kingoroot-windows-application)
+- [网心云 OneCloud 研究Openwrt研究](#网心云-onecloud-研究openwrt研究)
+  - [目前概述](#目前概述)
+  - [未测试的方法](#未测试的方法)
+- [魔百盒M401a玩转Coreelec](#魔百盒m401a玩转coreelec)
+  - [下载写镜像改dub.img](#下载写镜像改dubimg)
+  - [U盘启动](#u盘启动)
+  - [写入emmc](#写入emmc)
+  - [使用docket加载天翼网盘 阿里云盘](#使用docket加载天翼网盘-阿里云盘)
+    - [安装docker](#安装docker)
+    - [设置SMB共享](#设置smb共享)
+    - [CoreELEC的缓存设置](#coreelec的缓存设置)
+    - [启动 clouddrive](#启动-clouddrive)
+  - [samba4 共享文件不能访问问题](#samba4-共享文件不能访问问题)
+  - [蓝牙遥控](#蓝牙遥控)
+    - [mbh文件](#mbh文件)
+    - [rc\_maps\_cfg文件添加行](#rc_maps_cfg文件添加行)
+  - [蓝牙遥控确认键问题](#蓝牙遥控确认键问题)
+  - [蓝牙重启后失效](#蓝牙重启后失效)
+    - [reinstalled both TVheadend and all OK](#reinstalled-both-tvheadend-and-all-ok)
+    - [See below](#see-below)
+  - [蓝牙遥控启动](#蓝牙遥控启动)
+  - [直播源配置](#直播源配置)
+- [M401a刷Armbian进Emmc](#m401a刷armbian进emmc)
+  - [下载Armbian S905L3a镜像](#下载armbian-s905l3a镜像)
+  - [U盘启动](#u盘启动-1)
+  - [SSH连接系统并执行重启](#ssh连接系统并执行重启)
+  - [安装Docker](#安装docker-1)
+- [魔百盒M401A刷Openwrt](#魔百盒m401a刷openwrt)
+  - [下载rom](#下载rom)
+  - [使用balenaEtcher 把上面得Image 文件写入U盘](#使用balenaetcher-把上面得image-文件写入u盘)
+  - [重新插入u盘修改](#重新插入u盘修改)
+  - [打开盒子链接到网络。开启盒子得ADB](#打开盒子链接到网络开启盒子得adb)
+  - [从U盘启动 Openwrt](#从u盘启动-openwrt)
+  - [连接u盘系统。](#连接u盘系统)
+  - [写入 emmc](#写入-emmc)
+  - [然后自己随心所欲玩吧，玩法太多了](#然后自己随心所欲玩吧玩法太多了)
+- [斐讯K2刷Breed和潘多拉固件记录](#斐讯k2刷breed和潘多拉固件记录)
+- [F1 RK3399 研究](#f1-rk3399-研究)
+  - [RK刷机基础](#rk刷机基础)
+  - [Fastboot 解锁](#fastboot-解锁)
+  - [外网有人解决 不知道适用不](#外网有人解决-不知道适用不)
+  - [maskrom xrock](#maskrom-xrock)
+  - [【官方开发文档】RK3399 Efuse 操作指南](#官方开发文档rk3399-efuse-操作指南)
+- [备注](#备注)
+
 ## 常见的Amlogic设备
 
 <hr/>
@@ -96,28 +157,28 @@ date: 2023-01-02 15:43:01
 
 ## 咪咕MGV3200研究 GK6323芯片
 
-### 目前已测试 完整的破解模式 无需刷机
+> 目前已测试 完整的破解模式 无需刷机
 
-#### 在MGV3200上启用ADB 或者叫USB调试
+> > 在MGV3200上启用ADB 或者叫USB调试
 
-> 接USB键盘鼠标，等到机顶盒启动后连续F2 F3交替按 很快就会进入安卓本上的launcher 典籍打开全部应用 可以看到一个 AdbConsole。进去后点击打开既可。
+> > 接USB键盘鼠标，等到机顶盒启动后连续F2 F3交替按 很快就会进入安卓本上的launcher 典籍打开全部应用 可以看到一个 AdbConsole。进去后点击打开既可。
 
-> 或者MGV3200自带的两个设置程序里边也有，可以进去找找，具体记得不清了。
+> > 或者MGV3200自带的两个设置程序里边也有，可以进去找找，具体记得不清了。
 
 
-#### 使用 ADB 卸载和安装程序，adb程序自己在网上下载，非常多。
+>  使用 ADB 卸载和安装程序，adb程序自己在网上下载，非常多。
 
-##### ADB链接，MGV3200连网线的情况下，去路由器找到机顶盒的IP 比如我的是192.168.0.174
+> > ADB链接，MGV3200连网线的情况下，去路由器找到机顶盒的IP 比如我的是192.168.0.174
 
-> 首先 执行 cd命令进入你的adb.exe所在的目录下。
+> > 首先 执行 cd命令进入你的adb.exe所在的目录下。
 
-> 那么连接就是 adb connect 192.168.0.174 正常链接后会有提示：connected to 192.168.0.174:5555，这时候就可以进行卸载了。
+> > 那么连接就是 adb connect 192.168.0.174 正常链接后会有提示：connected to 192.168.0.174:5555，这时候就可以进行卸载了。
 
 ```
 C:\ADB>adb connect 192.168.0.174
 ```
 
-##### 我的卸载列表如下（可以执行 adb shell pm list packages查看当前系统中有哪些程序），照着一行一行执行既可，有些可能你的机子不一定有：
+> 我的卸载列表如下（可以执行 adb shell pm list packages查看当前系统中有哪些程序），照着一行一行执行既可，有些可能你的机子不一定有：
 
 ```
 adb shell pm uninstall -k --user 0 com.cmcc.dlna
@@ -137,7 +198,7 @@ adb shell pm uninstall -k --user 0 com.um.tvlauncher
 
 > 卸载成功后均有 Success 的提示消息
 
-##### 安装程序，讲apk安装包提前下载好放到adb目录下，然后执行类似下列的命令，apk名称替换为你的：
+> 安装程序，讲apk安装包提前下载好放到adb目录下，然后执行类似下列的命令，apk名称替换为你的：
 
 ```
 C:\ADB>adb install dangbeimarket_4.4.0_288_znds.apk
@@ -147,7 +208,7 @@ C:\ADB>adb install dbzm_4.1.6_dangbei.apk
 ```
 > 安装成功后均有 Success 的提示消息
 
-#### ADB的配置 查看IP，首先在系统中进入adb shell ping ip地址是可以的，但是ping域名不通，显然是运营商动了手脚，这时候我们就需要破解dns，也是很简单的
+> ADB的配置 查看IP，首先在系统中进入adb shell ping ip地址是可以的，但是ping域名不通，显然是运营商动了手脚，这时候我们就需要破解dns，也是很简单的
 
 > 这时候需要以root执行 因此需要执行 adb root，正常情况下返回空行: 
 
@@ -208,12 +269,11 @@ rtt min/avg/max/mdev = 25.922/26.125/26.316/0.118 ms
 
 > 当然这时候你得手动设置默认桌面，在系统 应用管理中 找到默认应用  进去设置默认启动器既可。
 
-#### 注意，这种方式如果你还原了系统，那么就得重新再这么配置一次了，不过你要熟悉了整个过程也是很简单。
+> 注意，这种方式如果你还原了系统，那么就得重新再这么配置一次了，不过你要熟悉了整个过程也是很简单。
 
 ### ADB 卡刷
 
-
-### 可以卡刷 403G 固件九联unt403G机顶盒6323处理器刷机教程；
+> 可以卡刷 403G 固件九联unt403G机顶盒6323处理器刷机教程；
 
 九联unt403G机顶盒6323处理器刷机教程；
 
@@ -550,23 +610,23 @@ docker  rm $(docker ps -a -q)
 
 ### samba4 共享文件不能访问问题
 
-#### 1、设置共享用户密码,刚开始口令文件是不存在的，先touch，再增加一个用户，ssh输入以下命令：
+> > 1、设置共享用户密码,刚开始口令文件是不存在的，先touch，再增加一个用户，ssh输入以下命令：
 
-> touch /etc/samba/smbpasswd
+> > touch /etc/samba/smbpasswd
 
-> smbpasswd  -a root
+> > smbpasswd  -a root
 
-#### 2、修改Samba模板,把字符集设置一下，启用root用户访问。
+> 2、修改Samba模板,把字符集设置一下，启用root用户访问。
 
-> 在invalidusers = root前加#
+> > 在invalidusers = root前加#
 
-#### 3、重启服务等
+> 3、重启服务等
 
-> service samba4 restart 
+> > service samba4 restart 
 
-> service samba4 stop 
+> > service samba4 stop 
 
-> service samba4 start
+> > service samba4 start
 
 ### 蓝牙遥控
 
@@ -678,7 +738,7 @@ udevadm info /dev/input/event4 | grep KEYBOARD_KEY
 
 ```
 
-#### https://discourse.coreelec.org/t/alfawise-z1-bluetooth-remote-configuration/2955
+> https://discourse.coreelec.org/t/alfawise-z1-bluetooth-remote-configuration/2955
 
 I have an Alfawise Z1 (2/16) and there was a problem under CE, the BT remote OK button cant working only when i switch to mouse mode. With this little mod i able to use as expected.
 
@@ -740,7 +800,7 @@ reboot
 
 Hi @Newoski, I had the same problem with a Harmony Hub before and used this:
 
-#### https://discourse.coreelec.org/t/odroid-n2-bluetooth-wont-auto-reconnect-after-reboot/7702/3
+> https://discourse.coreelec.org/t/odroid-n2-bluetooth-wont-auto-reconnect-after-reboot/7702/3
 
 > \# /storage/.config/system.d/harmony.service
 [Unit]
