--- a/_posts/2023-01-30-OpenWrt.md
+++ b/_posts/2023-01-30-OpenWrt.md
@@ -5,16 +5,40 @@ description: OpenwrtX86的的相关资料遗迹使用x86docker 玩转 DockerClou
 date: 2023-01-30 20:58:01
 ---
 
-### 安装
+- [安装](#安装)
+  - [软件源](#软件源)
+    - [阿里](#阿里)
+    - [官方](#官方)
+  - [系统存储控件的扩容](#系统存储控件的扩容)
+    - [安装 工具](#安装-工具)
+    - [cfdisk 划分空间](#cfdisk-划分空间)
+    - [执行扩容脚本](#执行扩容脚本)
+    - [使用外置硬盘](#使用外置硬盘)
+  - [安装Docker](#安装docker)
+  - [Docker pull  clouddrive](#docker-pull--clouddrive)
+  - [Run](#run)
+  - [启动重启后启动所有docker 容器](#启动重启后启动所有docker-容器)
+  - [配置 smaba](#配置-smaba)
+  - [配置 AdguardHome 广告拦截插件](#配置-adguardhome-广告拦截插件)
 
-### 软件源（23.03.3X86 要注意版本和处理器架构，不然可能会出现不兼容的问题）
+
+## 安装
+
+### 软件源
+
+> （23.03.3X86 要注意版本和处理器架构，不然可能会出现不兼容的问题）
 
 > 从官方软件园下载相关.img文件,一定要注意平台架构。
+
 > 启动WinPE，用DiskGenius删除索要安装硬盘的所有分区，确定。不要进行分区操作。
+
 > 下载physdiskwrite和img文件放在一个目录下，然后cmd进入相关目录，执行 physdiskwrite -u xxx.img。 然后按需输入磁盘号和输入yes 。
+
 > 完毕后重启，硬盘引导即可进入系统进行相关配置。
 
-#### 阿里 （似乎缺少一些系统工具，例如block-mount ）
+#### 阿里 
+
+> （似乎缺少一些系统工具，例如block-mount ）
 
 ```
 src/gz ali_core https://mirrors.aliyun.com/openwrt/releases/22.03.3/targets/x86/64/packages
@@ -48,7 +72,9 @@ src/gz openwrt_routing https://downloads.openwrt.org/releases/22.03.3/packages/x
 src/gz openwrt_telephony https://downloads.openwrt.org/releases/22.03.3/packages/x86_64/telephony
 ```
 
-### 系统存储控件的扩容（使用系统剩余未分区空间）
+### 系统存储控件的扩容
+
+> （使用系统剩余未分区空间）
 
 #### 安装 工具
 
@@ -66,7 +92,9 @@ src/gz openwrt_telephony https://downloads.openwrt.org/releases/22.03.3/packages
 
 > block-mount 挂载 /sda3 作为根文件系统使用。 Save and Apply
 
-#### 执行扩容脚本（block-mount挂在后又提示 mount /dev/sda3 /tmp/extroot这句种的设备改成你的就好了）
+#### 执行扩容脚本
+
+> （block-mount挂在后又提示 mount /dev/sda3 /tmp/extroot这句种的设备改成你的就好了）
 
 ```
 mkdir -p /tmp/introot
@@ -79,7 +107,9 @@ umount /tmp/extroot
 reboot
 ```
 
-#### 使用外置硬盘跟这个过程一致只是你挂在的事另一块而已，注意设别名称即可
+#### 使用外置硬盘
+
+> 跟这个过程一致只是你挂在的事另一块而已，注意设别名称即可
 
 ### 安装Docker 
 
