--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -31,7 +31,16 @@ date: 2021-05-01 05:01:01
 - [生活随记](#生活随记)
 - [什么叫良史官](#什么叫良史官)
 - [她](#她)
-- [沣河生态公园春游记](#沣河生态公园春游记)
+- [关中除西宝之外的原](#关中除西宝之外的原)
+  - [乾县庄子塬](#乾县庄子塬)
+  - [泾阳县西北塬](#泾阳县西北塬)
+  - [渭南西塬](#渭南西塬)
+  - [富平荆山塬](#富平荆山塬)
+  - [蒲城县南塬](#蒲城县南塬)
+  - [大荔镰山塬](#大荔镰山塬)
+  - [华州高塘塬](#华州高塘塬)
+  - [潼关南塬](#潼关南塬)
+  - [其他搜集中](#其他搜集中)
 - [忆幼时的杨柳笛声](#忆幼时的杨柳笛声)
 - [杂记2023-03-15](#杂记2023-03-15)
 - [芸芸众生](#芸芸众生)
@@ -518,27 +527,64 @@ date: 2021-05-01 05:01:01
 
 > 对她总有千万的思想，但是只能深藏心间，化作思量。这种感情只能深藏在心中，不能表述出来。内心里也是希望她好，能有个好的归宿，那样我也会十分欢喜。
 
-## 沣河生态公园春游记
+## 关中除西宝之外的原
 
-> 2023-03-12
+### 乾县庄子塬
 
-> 除去前日西安普降沙尘宝，空气极为恶劣。12日又是一个大晴天，天气也不错，还是周日。等孩子把作业写完，吃过午饭之后便带着娃出去湾。
+咸阳最有名的塬就是咸阳塬了，西起武功县的漆水河畔，东至泾河渭水交汇处，这之间的黄土台塬地区都是咸阳塬。咸阳市区就在咸阳塬下。咸阳塬也称北塬、毕塬、五陵塬等等。今天绵阳市钓鱼台街道也称短阴塬。
 
-> 随机的就想想着去沣河边玩玩，没想到一路车子十分堵。可能大家都觉得这个天气是不错的出行日吧，因此齐刷刷的就堵在路上了。
 
-> 到了沣河生态公园的时候已经接近下午3点了。自然车辆也很多，停车场满载，很不容易等了一会，进到了停车场，停好了车子就带着孩子进去公园了。
 
-> 这个公园有许多草地，正直初春，天气暖和，草开始变绿。草地上到处是玩耍的孩子，还有许多五颜六色的帐篷。大人们则围在一起，吃着东西，聊着天。孩子们则自由的在边上奔跑。也有人在放风筝，天上也飘了不少风筝。当然了，绿岛上也是闲散的人或者运动健身的。
+渭北旱塬带上也分布着大大小小的塬。泾阳县西北部有个西北塬，也叫舆车塬。毕塬到了泾阳境内称南塬。泾阳还有一个丰埝塬，位于泾阳县中部，北靠冶峪河，南临泾河，西接西北塬，东南延伸高陵县境内，因此地地肥水足，年年丰稔，故名叫丰稔塬，又叫解甲塬。郭子仪曾在此处单骑退回纥。泾阳县城北边夏村有个铠甲塬，相传郭子仪在此赠铠甲而得名。
 
-> 我们沿着绿道往南走，欣赏着这春日的景色，沣河水变得十分清澈，南边的秦岭也变得更青了。两旁的柳树已经长满了嫩芽。还有一些桃树，杏树之类的开满了各色的花朵，景象十分美丽。不少的游人在这些花边上拍照留影。我也给孩子在一处花树边上拍了些照片。
 
-> 一路玩耍，一路向南走去。 孩子见到一些玩耍的台子就要停留下来玩。我们就这样磨蹭了一些时光。后来妻子和女儿走不动了，我就让他们在边上找个地方休息。我带着孩子继续向南边走。我们边走边欣赏这公园里的镜像。儿子时不时的拔一把草，摘一朵花，闻一闻，嗅一嗅。
 
-> 这个公园并未完全建成，里边还有好多设施正在建设，有些店铺之类的也正在装修。里边也有一些工人正在浇水，喷洒农药。但是因为周边没有什么工厂，所以环境比较原生态，尤其是绿道，特别适合跑步。还有几处白杨林，挺拔秀丽，中间还有一些走廊，行走在上面特别惬意。有时候一阵风吹过，听着白杨树发出的声音让人感觉特别惬意。
+### 泾阳县西北塬
 
-> 公园并不大，我们很快就走到头了，在尽头玩了一阵，就继续向北走去。公园还有不少人不知道从那里挖到一些野菜，荠荠菜之类的，正坐在路边的凳子上择菜。我们继续寻找妻子和女儿，她们正在一处亭子下玩手机，我不喜欢孩子玩手机，就带着女儿在草地上玩了会。
+三原县以其地南有丰塬，西有孟侯塬，北有白鹿塬而得名。丰塬因丰塬里在此，孟侯塬因有孟侯祠，也叫天齐塬；白鹿塬又叫万寿塬，因此地曾出现白鹿，所以称白鹿塬。白鹿原上还有一个炮里塬。
 
-> 时光飞逝，天渐渐变黑，我们也不得不带上孩子往回走了，孩子们还有点依依不舍。
+在三原、阎良、富平交界处，有一个荆山塬，又称中华塬，当地人称荆山或者北塬，大禹曾在此铸鼎。
+
+
+
+
+### 渭南西塬
+
+渭南东塬又称长寿塬、长稔塬、丰塬、广乡塬、崇凝塬。渭南县志云：邑（渭南老县城）之南，有塬曰“丰”。这里的丰指的就是丰原，即指东塬的代称。崇凝塬，也叫东塬、丰塬、长稔塬、长收塬。根据古汉语意思解释，长稔塬，稔，就是丰收的意思。因土地肥沃，雨量充沛，长年丰收，人们便将其塬称之为长收塬。后因谐音变化，演变为至今所说的“长寿塬”。渭南民谣：“华阴华州水浇田，比不上渭南长寿塬 ”，说的就是这块土地物产丰茂的生动写照。
+渭北的富平除了有荆山塬以外，还有一个留古塬，留古塬上有唐永陵。
+
+富平中部有一道台塬，称浮塬。富平有“三山四水”之说。三山指的是频山、浮山、荆山，这里的浮山就是浮塬。东起到贤坡头，西至温泉河东岸，北临顺阳河，南沿卤泊滩。东西长约二十一公里，南北宽约七公里。
+
+### 富平荆山塬
+
+富平还有南塬、吕村塬、中山塬、王寮塬等等。
+
+蒲城县城南有条东西绵延的坡塬，当地人称之为南塬。每逢开春后，塬上开满紫荆花，自成一景，所以又称紫荆塬。
+
+
+### 蒲城县南塬
+
+在大荔县北部有一道土塬，因其状似铁镰、长虹，故取名镰山塬，又称铁镰山、长虹岭。其走向为东北偏东而西段转向西南。东崩于黄河而断于金水沟，西堑于洛河而止于西坡头，东西长约45公里，南北宽约4.9公里。历史上多系荒沟，现已改造成梯田、果园。
+
+### 大荔镰山塬
+
+韩城南塬，东靠黄河，西至爱贴桥，北依芝水河，南临太枣沟的凸起高地，东西长约十公里，南北宽约四公里。这里历史底蕴厚重。司马祠就在南塬的延伸架上。
+
+韩城境内还有泌惠塬、龙亭塬、英山塬、戈家塬、少梁塬等等。
+
+### 华州高塘塬
+
+在渭南华州区境内的秦岭脚下，有个高塘塬，这里曾发生了渭华起义，渭华起义是中国西北地区发生最早、规模最大、影响最深的一次暴动,也是在全国有重大影响的重要起义之一。
+
+### 潼关南塬
+
+关中东大门潼关，在潼关的禁沟和远望沟之间就是南塬，唐以前的潼关就设在南塬之上，自古这里是进出关中的要地，也是兵家常争之地。
+
+关中地区是盆地状，中间渭河河谷最低，向南边两边逐渐抬升，直到南边的秦岭和北部的北山。而这些大大小小的塬就分布在渭河两岸和南北的山系之间，自西向东延绵300余公里。而关中人世世代代就生活在这些塬上塬下。塬滋养着关中人，关中人守护着这些塬。
+
+### 其他搜集中
+
+在咸阳的塬 咸阳塬、短阴塬、浅水塬 渭南的塬 荆山塬、广乡塬、许塬、高门塬、韩塬 转载必须保留本文地址:https://www.kdhlw.com/p/125813.html
 
 ## 忆幼时的杨柳笛声
 
