--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -30,8 +30,8 @@ date: 2021-05-01 05:01:01
 - [李氏家训](#李氏家训)
 - [生活随记](#生活随记)
 - [什么叫良史官](#什么叫良史官)
-- [她](#她)
 - [关中除西宝之外的原](#关中除西宝之外的原)
+  - [咸阳塬（北塬、毕塬、五陵塬）](#咸阳塬北塬毕塬五陵塬)
   - [乾县庄子塬](#乾县庄子塬)
   - [泾阳县西北塬](#泾阳县西北塬)
   - [渭南西塬](#渭南西塬)
@@ -513,40 +513,31 @@ date: 2021-05-01 05:01:01
 
 > 后世史家则更甚。多对帝王的恶性予以隐，而小功则大褒美。四史之后多对帝王将相大加赞赏，美化。这大概就是为什么前四史更加受欢迎，其词藻繁华太甚。而春秋言简意赅，微言大义，读者则鲜矣。
 
-## 她
-
-> 有一种女子是那种让人一见倾心的那种，或者叫一见钟情，她就是我心中那样的女子。第一次和她目视就被你的眼神所触动。她那明眸让人深深动情。
-
-> 起先只是偶尔侧目观察她，慢慢的视野时不时的就要搜寻她。见不到的时候也常在心中思念。
-
-> 她工作的样子十分美丽，一丝不苟的，静静的。有时候看她发呆也是一番别样的感觉。
-
-> 每天希望看到她，只是看到即可，看到她的样子，看到她工作的样子。尤其是她头戴小发卡，实在让人不能忘记。
-
-> 那天女神节，别的女生多休假去了，而她却依然在辛勤工作，一直到很晚。
-
-> 对她总有千万的思想，但是只能深藏心间，化作思量。这种感情只能深藏在心中，不能表述出来。内心里也是希望她好，能有个好的归宿，那样我也会十分欢喜。
-
 ## 关中除西宝之外的原
+
+### 咸阳塬（北塬、毕塬、五陵塬）
+
+> 咸阳原西起武功漆水河畔，东至泾渭交汇处，咸阳市区就在咸阳塬下。咸阳塬也称北塬、毕塬、五陵塬等等。包括武功、兴平、咸阳、泾阳、乾县、礼泉等地区，这里地势本身就平坦，河流在这里也比较缓慢，冲刷的不是太厉害，实际上应该是许多小小的原区
+
+> 咸阳塬在历史上也是十分有名，自秦孝公迁都咸阳，至始皇帝统一天下，这里一度成为帝国的中心，秦咸阳宫便在这。
+
+> 自汉之后多为帝王的陵墓所在，西汉王朝的开国皇帝汉高祖刘邦选定咸阳原作为皇家陵园。汉高祖长陵恰位于汉长安城中心的安门大街南北轴线。西汉王朝的11位皇帝中，有9位皇帝的陵墓便建在咸阳原上,东向西依次为：阳陵、长陵、安陵、义陵、渭陵、康陵、延陵、平陵和茂陵。有名的有周陵（可能不过是秦代陵墓）、茂陵、乾陵、昭陵等。有东方帝王谷之称。
+
+> 咸阳原在历史上曾有过繁华喧闹的一页。在为皇帝建造陵墓的同时，照例在陵旁设置陵邑，也就是要在每座陵园旁边建造一座城市。从全国各地迁移富豪望族到陵邑居住，迁居陵邑成为当时的一种荣耀和时髦，被视为地位和财富的象征。它又名五陵原，因长陵、安陵、阳陵、茂陵、平陵建有陵邑而得名。其中茂陵邑人口竟达到27.7万。
+
+> 据《旧唐书》记载“汉室之法，人君在位，三分天下贡赋，以一分入山陵”。再加上皇亲国戚们陪葬的财富，咸阳原上的财富无疑是极其巨大的文物宝库，虽有被盗掘，但是剩余的也不在少数，咸阳机场扩建时，虽避开陵园附近区域，仍发现巨大的陪葬俑坑。
+
+> 除汉陵外，咸阳原上的帝王陵墓还有战国时期的秦惠文王陵和秦悼武王陵、唐高祖李渊之父李昞的兴宁陵和武则天之母杨氏的顺陵。
 
 ### 乾县庄子塬
 
-咸阳最有名的塬就是咸阳塬了，西起武功县的漆水河畔，东至泾河渭水交汇处，这之间的黄土台塬地区都是咸阳塬。咸阳市区就在咸阳塬下。咸阳塬也称北塬、毕塬、五陵塬等等。今天绵阳市钓鱼台街道也称短阴塬。
-
-
-
 渭北旱塬带上也分布着大大小小的塬。泾阳县西北部有个西北塬，也叫舆车塬。毕塬到了泾阳境内称南塬。泾阳还有一个丰埝塬，位于泾阳县中部，北靠冶峪河，南临泾河，西接西北塬，东南延伸高陵县境内，因此地地肥水足，年年丰稔，故名叫丰稔塬，又叫解甲塬。郭子仪曾在此处单骑退回纥。泾阳县城北边夏村有个铠甲塬，相传郭子仪在此赠铠甲而得名。
-
-
 
 ### 泾阳县西北塬
 
 三原县以其地南有丰塬，西有孟侯塬，北有白鹿塬而得名。丰塬因丰塬里在此，孟侯塬因有孟侯祠，也叫天齐塬；白鹿塬又叫万寿塬，因此地曾出现白鹿，所以称白鹿塬。白鹿原上还有一个炮里塬。
 
 在三原、阎良、富平交界处，有一个荆山塬，又称中华塬，当地人称荆山或者北塬，大禹曾在此铸鼎。
-
-
-
 
 ### 渭南西塬
 
