--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -58,8 +58,9 @@ date: 2021-05-01 05:01:01
   - [NO12,青春少女](#no12青春少女)
   - [NO13,年轻保安](#no13年轻保安)
   - [NO14,年轻少妇](#no14年轻少妇)
-  - [N015](#n015)
-  - [N016](#n016)
+  - [N015,皮肤黑红的美女](#n015皮肤黑红的美女)
+  - [N016,骑电动车的时尚老人](#n016骑电动车的时尚老人)
+  - [NO17,蹬三轮载着孙子的老人](#no17蹬三轮载着孙子的老人)
 - [评论合集](#评论合集)
 - [备注](#备注)
 
@@ -514,6 +515,8 @@ date: 2021-05-01 05:01:01
 
 > 后世史家则更甚。多对帝王的恶性予以隐，而小功则大褒美。四史之后多对帝王将相大加赞赏，美化。这大概就是为什么前四史更加受欢迎，其词藻繁华太甚。而春秋言简意赅，微言大义，读者则鲜矣。
 
+> 许多作者在为写作传记的时候为喜欢的英雄人物多写几笔，这自然是可以允许的。那个人能没有感情，对喜欢的人物多加几笔又如何，只要史实不存在瞎编乱造又何妨。司马迁对李广润笔过多，导致后人多又批评，实则《李将军传》并没有影响《史记》价值和史实。
+
 ## 关中除西宝之外的原
 
 ### 咸阳塬（北塬、毕塬、五陵塬）
@@ -663,13 +666,17 @@ date: 2021-05-01 05:01:01
 
 > 这个女生于我同住一个小区，偶然能碰到她接送孩子，也有几次在校区门口碰到，大概跟我早上有一段通路。他特别苗条，穿一身工装西服，很是合体。头发微卷，面似桃花，五官极为清秀，不那般浓妆艳抹得女子。今日偶然又在小区碰见，今见她不似以前穿工装，二十穿长款粉色羽绒服，下身是宽松得牛仔裤，反跟显得苗条。常常得头发，唯有刘海有些卷，标致的五官，镶嵌在粉面上，更似春风佛面桃花笑。
 
-### N015
+### N015,皮肤黑红的美女
 
 > 这个女生年级也不过三十,瓜子脸十分瘦长，皮肤微黑微红，面庞消瘦。樱桃小嘴很是红软，若是面色再红润一些那就跟家美丽不过了，不过那双脸蛋确实很好看。鼻子窄而高，很像西方混血美女。一双桃核眼，有些黑眼圈，眉毛修整的细长。整个五官很是协调。长长的头发，从中间分开，乌黑发亮。身材也很高，整个身体都十分苗条，可惜肤色稍带黑暗。整体身材苗条，两手纤细，胸部不是很发达，臀部有些宽，腰部不是很细，这点上有些遗憾。 整体来说也是那种长相美好的女子了。
 
-### N016
+### N016,骑电动车的时尚老人
 
 > 今早在路口见到一个老大爷，感觉打扮十分帅气。一身黑色的衣服，没有看清是呢子大衣还是什么，头戴一顶黑色墨西哥阔边帽，有种侠客的感觉。老大爷骑的是一辆红色的三轮车，估计是周围负责运货的，这么大年纪出来工作已着实相当难能可贵。可是大爷在路上确实不怎么遵守交通规则，闯红灯，逆行，还不住的按着喇叭。是在是替老大爷担忧，生活不易，且行且珍惜。小心使得万年船，一招不慎终身后悔。但是想想这些大家生活多么不易，如果条件允许谁会一大把年级出来冒险开三轮车，谁有会让自己父母这么一大把年级还出来谋生呢？
+
+### NO17,蹬三轮载着孙子的老人
+
+> 今早下大雨，路过地铁口，一老头艰辛得瞪着人力三轮车。车仓里坐着他的小孙子，似乎有些发冷，蜷缩在一角。车上还不知道装着什么，盖着一层塑料布。似乎老头送完孙子还要去送货吧。老头也是一身雨衣，包裹的很严实，在雨中艰辛前行。路边的车辆时不时的飞驰而过，老人一边向前走，还要一边留意边上的车辆，防止水溅到他孙子身上。这大概就是普通人的生活了吧，就是这么真实，温馨又充满真情。
 
 ## 评论合集
 
