--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -43,6 +43,8 @@ date: 2021-05-01 05:01:01
   - [其他搜集中](#其他搜集中)
 - [忆幼时的杨柳笛声](#忆幼时的杨柳笛声)
 - [杂记2023-03-15](#杂记2023-03-15)
+- [读通鉴杂记 2023-03-24](#读通鉴杂记-2023-03-24)
+- [读后汉书杂记 2023-03月底](#读后汉书杂记-2023-03月底)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -606,6 +608,22 @@ date: 2021-05-01 05:01:01
 > 最近国际形式不太理想，我国已经跌为美国第四大贸易伙伴，但是老爷们似乎还没有感觉到威胁。似乎要嚷嚷着跟世界推规。我国在明清时就以天朝上国自居，结果落得个落后挨打。闭关自守，与世界科学技术逐渐拉开距离了。近几十年经济科技实力稍微有所好转，有些老爷们就开始自大起来。明清的历史去我们尚未远，却已经不被人所鉴了，难怪历史的车轮不断滚滚转转，谁也摆脱不了被碾压的命运。美国人对于我国的芯片领域封杀，是及其厉害的一招，有着打中七寸之危。但是我们是吹吹牛，几年之内就能比肩人家，老爷们也想想了。如今距离吹过的牛也已好几年了，芯片技术还是感觉没有什么进步。当官那么好的，吃香喝辣的，谁会愿意去作这份苦差事？但是“学而优则仕”这种理念很难被打破了，我民族似乎只有在危难当头才会想到科技救国，不然就是诗书礼乐。真的是难难难。
 
 > 最近有种感觉，中美之间五年之内似乎要有一场决战了。老爷们享了几十年清平盛世，军队只是磨刀，谁有知道这倒利不利，反正国人看着倒是挺亮的，明晃晃有些瘆人。美国人的战争意识真的是太明显了，老爷们似乎还没有感觉出来。美国佬从小战争打起，把周边的效果修理了一圈。况且这两年我国在国际上也已经没什么朋友，只俄罗斯，朝鲜这种二，三流国家。形势十分危急矣。
+
+## 读通鉴杂记 2023-03-24
+
+> 秦法残酷，然数百年秦国却很少发生暴动，所以秦法残酷可能只是借口。
+
+> 曹操还不如王莽，只是王莽篡汉比较早，背上了历史第一反贼的骂名。另王莽改制失败，导致天下大乱，各方诸侯以恢复汉室为名，把王莽称为反贼。倘新朝改革图强，则后世纪对王莽则会大家赞誉。王莽改革只是有些不合时宜，或者说有些超前，因此得以失败！曹操生前没称帝，把称帝的机会让给了儿子。其能力也不如王莽。
+
+> 李世民玄武门之变后上任太快，极有可能是其逼迫高祖退位。
+
+## 读后汉书杂记 2023-03月底
+
+> 窦宪功比卫霍，卫霍耗费巨多尚不能平匈奴 实在不能与窦宪比
+
+> 成周成王所都
+
+> 孔子里仁为美 意常怀善心仁慈之心
 
 ## 芸芸众生
 
