--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -45,6 +45,8 @@ date: 2021-05-01 05:01:01
 - [杂记2023-03-15](#杂记2023-03-15)
 - [读通鉴杂记 2023-03-24](#读通鉴杂记-2023-03-24)
 - [读后汉书杂记 2023-03月底](#读后汉书杂记-2023-03月底)
+- [读傅斯年资料相关谈中国历史时期划分](#读傅斯年资料相关谈中国历史时期划分)
+- [春秋杂谈](#春秋杂谈)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -624,6 +626,60 @@ date: 2021-05-01 05:01:01
 > 成周成王所都
 
 > 孔子里仁为美 意常怀善心仁慈之心
+
+## 读傅斯年资料相关谈中国历史时期划分
+
+> 远古 三皇五帝以上，概现代人所谓原始社会，集体耕作，部落之间也有冲突，但是相对较少。
+
+> 上古，奴隶社会，夏商周是也。中央只是较大部族，各部相互征伐，掠夺其他部落资源，且部落之间战争规模较大。封建社会，周，分封制，诸侯权力较大。
+
+> 帝制时期，社会高度集中，诸侯权力较小，权力集中到帝王。中古，诸侯相互攻伐，易国易姓，名义上国家属于某个姓氏所有。
+
+> 近代，共和，改地址为共和，政权始由政党独裁，或曰少数人控制。
+
+> 周秦之强盛，概因其二族近乎夷狄。所以不得不一边生产一边习战，所谓民风彪悍。相较中原少战士。周秦入中原，犹如虎狼入羊群，难于匹敌。
+
+> 后世礼乐制度使我中华民族不善战争，改有鸦片战争之辱以及庚子，甲午之耻。以此观之，若一个民族须得长久，其必不能忘记长备战事。
+
+> 近世史家以隋唐有胡族血液，乃说隋唐为外国，甚谬。何为中华者，乃在于文华。自周之后，周公制礼乐，孔子著于书，定六艺，世袭罔替，此我汉民族之根而。岂因一点外族血液而变哉？
+
+> 今之美利坚人概数百民族融合，随立国三百余年，民族不断变迁，况我五千年华夏族乎？
+
+> 自周秦，我华夏便于各戎狄相互攻伐，相处，汉代乃融合匈奴，兼容并蓄。
+
+> 隋唐之后又纳入突厥等。
+
+> 两宋之际为契丹，金，蒙古所欺，然其亦逐渐为我汉文化所折服。
+
+> 满清则全盘接纳，甚至其自身文化亦逐渐废弃。
+
+> 若论血液（统），则天下之人概均继承自同几只猿猴尔。
+
+> 其外族人，能尊我中华礼仪，自然应接纳之。
+
+> 总管以上，则我汉民族数千年长盛未衰。且我汉族从未绝断。
+
+> 州这个字很奇怪，按甲骨文为水中之岛的意思。
+
+> 禹分九州按说应该按水系划分，才能叫州,但是许多大河大江却穿插在某些州中。
+
+> 或因水系改变，而九州乃是大禹初定洪水之后所分？
+
+## 春秋杂谈
+
+> 《史记》曰：“周道衰废，孔子为鲁司寇，诸侯害之，大夫壅之。孔子知言之不用，道之不行也，是非二百四十二年之中，以为天下仪表，贬天子，退诸侯，讨大夫，以达王事而已矣。’ 子曰：‘我欲载之空言，不如见之於行事之深切著明也。”
+
+> 春秋是否孔子所作至今似仍有争议，但其主体当为孔子所著用于讲学，观其语言实在太过细腻，绝非短期所成，因此有其弟子不断修改校正削裁亦有可能。
+
+> 于以为：
+
+> 春秋并非史书，而是借史正礼仪。大多君臣父子之事。因此可以随意取舍。不宜太繁，需要适当的裁剪。其诗三百，尚书大抵如此。
+
+> 春秋以隐公开始概因隐公之前礼仪尚未缺失，无多少事可褒贬，或太远。
+
+> 孔子尚周公，隐公代帝摄政为公，颇有周公之风，孔子所褒因以为始。
+
+> 春秋完成之后孔子又说：“知我罪我，其惟春秋”。概自孔子以事论政，所以有“知我罪我，其惟春秋”之说。
 
 ## 芸芸众生
 
