--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -30,6 +30,7 @@ date: 2021-05-01 05:01:01
 - [李氏家训](#李氏家训)
 - [生活随记](#生活随记)
 - [什么叫良史官](#什么叫良史官)
+- [史类随谈](#史类随谈)
 - [关中除西宝之外的原](#关中除西宝之外的原)
   - [咸阳塬（北塬、毕塬、五陵塬）](#咸阳塬北塬毕塬五陵塬)
   - [乾县庄子塬](#乾县庄子塬)
@@ -47,6 +48,7 @@ date: 2021-05-01 05:01:01
 - [读后汉书杂记 2023-03月底](#读后汉书杂记-2023-03月底)
 - [读傅斯年资料相关谈中国历史时期划分](#读傅斯年资料相关谈中国历史时期划分)
 - [春秋杂谈](#春秋杂谈)
+- [上古之帝高寿问题随谈](#上古之帝高寿问题随谈)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -525,6 +527,20 @@ date: 2021-05-01 05:01:01
 
 > 许多作者在为写作传记的时候为喜欢的英雄人物多写几笔，这自然是可以允许的。那个人能没有感情，对喜欢的人物多加几笔又如何，只要史实不存在瞎编乱造又何妨。司马迁对李广润笔过多，导致后人多又批评，实则《李将军传》并没有影响《史记》价值和史实。
 
+> 古之史记，多为太祖附加神话传说以彰其才，概古人缺少知识，今人治史则应去其糟粕，去神还人。
+
+## 史类随谈
+
+> 语类，尚书，国语，只专注语言，不书事务，无事件描述，其内容难懂，内容较为晦涩。
+
+> 编年类其人物事件等过于分散，很难知详事务过程。
+
+> 国别类类容也较为分散，对于国与国间事务则需越多多篇内容方知事情前因后果。
+
+> 纪传类，过于分散类容重复则较多，一个事件在多个人物传记中均会出现。
+
+> 纪事本末类，按事件描述整件事情的来龙去脉，但是如需了解人物生平则显困难。
+
 ## 关中除西宝之外的原
 
 ### 咸阳塬（北塬、毕塬、五陵塬）
@@ -680,6 +696,22 @@ date: 2021-05-01 05:01:01
 > 孔子尚周公，隐公代帝摄政为公，颇有周公之风，孔子所褒因以为始。
 
 > 春秋完成之后孔子又说：“知我罪我，其惟春秋”。概自孔子以事论政，所以有“知我罪我，其惟春秋”之说。 
+
+## 上古之帝高寿问题随谈
+
+> 按竹书纪年，黄帝轩辕氏在为一百余年，帝颛顼高阳氏七十八年，帝喾高辛氏六十三年，帝尧陶唐氏在位一百多年，帝舜有虞氏在位五十年。
+
+> 以今之人尚难立如此之岁数，何况古人乎？况上古非成人难以成帝。
+
+> 于以为上古部落以氏而称，帝系如此，诸侯世家亦多以官职爵位为氏。所谓一百年乃各姓氏执政时间，史记所载乃姓氏为帝之时间，而非一人，炎帝氏等更古帝王亦是如此。
+
+> 观太史公纪其序，而去其年，乃谬矣，太史公致使后人误以为五帝唐虞各位一人。以于观之，五帝乃五方部落，部落间首领变更，然其部落不变。秦汉以五畤祭祀“五帝”乃因以此，秦置四畤汉补一畤，乃第五畤为秦尔。
+
+> 每个部落概出自同一姓氏，其首领的庶出诸子或非首领继承人或外出成立新的部落。
+
+> 夏以前当无名，所谓五帝之名当为后世讹传，如无文字，哪得其名乎？于观之文字所创也非夏之前，概夏后知名颇为清晰，而五帝唐虞之名则为混乱。夏之后创文字，所以追夏后之名，然夏初却无事可纪。
+
+> 概后世所谓唐虞夏商乃四个部落，这四个部落依次交替领导诸侯。依太史公之言，则五帝唐虞夏商周秦均出自轩辕氏，至于周始创国家制度。周之后姓氏变多，混用致世系难于考证，但后世帝王诸侯均追其祖为炎黄之后，此乃炎黄子孙之所始。
 
 ## 芸芸众生
 
