--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -49,6 +49,8 @@ date: 2021-05-01 05:01:01
 - [读傅斯年资料相关谈中国历史时期划分](#读傅斯年资料相关谈中国历史时期划分)
 - [春秋杂谈](#春秋杂谈)
 - [上古之帝高寿问题随谈](#上古之帝高寿问题随谈)
+- [读杨宽先生《古史新探》](#读杨宽先生古史新探)
+  - [谈古之农具“耒耜”](#谈古之农具耒耜)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -712,6 +714,20 @@ date: 2021-05-01 05:01:01
 > 夏以前当无名，所谓五帝之名当为后世讹传，如无文字，哪得其名乎？于观之文字所创也非夏之前，概夏后知名颇为清晰，而五帝唐虞之名则为混乱。夏之后创文字，所以追夏后之名，然夏初却无事可纪。
 
 > 概后世所谓唐虞夏商乃四个部落，这四个部落依次交替领导诸侯。依太史公之言，则五帝唐虞夏商周秦均出自轩辕氏，至于周始创国家制度。周之后姓氏变多，混用致世系难于考证，但后世帝王诸侯均追其祖为炎黄之后，此乃炎黄子孙之所始。
+
+## 读杨宽先生《古史新探》
+
+### 谈古之农具“耒耜”
+
+> 我从小在农村，看到一本这个讲农具的内容却颇感奇怪，许多大家大师却在为农具的名称而争论，甚为可笑。而且时间跨度上千年。
+
+> 古之耒耜为二器，耒者在今关中还这样称呼，又叫耙 ，是一种长条木制编程，用于耙地或耒得，当今亦如此称呼。耒地或者耙地的时候需要一个人站在上面，然后赶着牛耒地。向前的一面自然切割成尖刺状，可以碎图，压过去可以把地啪地平整。现在基本已经其主要工作内容已经被旋耕机代替，但是播种小麦的时候还是离不开耒。
+
+> 耜就是犁，现在是金属，可能西周以前也是用硬木，也需要牛拉着犁地。主要是为了开沟翻土，上面带上铧之后可以翻得很深。现在的机器铁犁也差不多，但是用拖拉机带动的机器犁，翻得更深。但是其基本原理并没有发生变化。
+
+> 这两个器具是春秋之前的主要工具，先犁地，然后再耒得。犁地会起沟，有大土块。然后耒得，作用就是碎土，平地。
+
+> 这两个东西现在基本上也都在使用，只是材料越来越先进了。但是其基本原理是一样的，并未发生根本变化，而且这两个工具也一直并没有消失。这就可以看出我们祖先的伟大之处，数千年前发明的工具如今依然在影响着我们今人的生活和耕种方式。
 
 ## 芸芸众生
 
