--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -11,6 +11,7 @@ date: 2021-05-01 05:01:01
 - [韩信受胯下之辱](#韩信受胯下之辱)
   - [参考文献](#参考文献)
 - [读《史记》有感：非子所封秦邑在宝鸡千渭之会](#读史记有感非子所封秦邑在宝鸡千渭之会)
+- [谈孔子何以“累累若丧家之狗”](#谈孔子何以累累若丧家之狗)
 - [秦始皇姓氏小论](#秦始皇姓氏小论)
 - [唐太宗李世民](#唐太宗李世民)
 - [关中人说](#关中人说)
@@ -172,9 +173,31 @@ date: 2021-05-01 05:01:01
 
 > 再后来的历史就很明确了，秦襄公派护送周平王东迁有功，始列诸侯，并且几乎整个关中都封给了秦（名义上），后来秦襄公又迁都回关中的汧邑，基本就是非子的始封地。
 
+> 除此之外还有一证，在《史记中》：自孔子死之后百二十九年，而史记周太史儋见秦献公曰：“始秦与周合，合五百岁而离，离七十岁而霸王者出焉。”或曰儋即老子，或曰非也，世莫知其然否。老子，隐君子也。虽太史儋所预言或未后人所附会，然此证为司马公所引，此论必出自早期史料，或早于战国。秦与周合如秦在甘肃怎么合？而千渭之会实在周原之边缘，显然很符合。
+
 > 综上，秦最早就始于宝鸡千渭之会，真正的千渭之会才是历史上的秦邑。中间只是一段时期在甘肃抗击戎人，才又合并并回到了赵氏一脉的陇西。最后又重回关中建都，因此文公才有了那段“昔周邑我先秦嬴于此，后卒获为诸侯。”的赞叹。值得注意的是，历史上好长一段时间，甘肃陇西地区也是归陕西省管理的。如今在千渭之会的魏家崖遗址已经破土，这段非子的秦邑即将现世。
 
 > 2023-03-28 15：13 修改
+
+## 谈孔子何以“累累若丧家之狗”
+
+> 2023-04-11 10：21 初稿
+
+> 《孔子世家》载：“东门有人，其颡似尧，其项类皋陶，其肩类子产，然自要以下不及禹三寸，累累若丧家之狗。”此是孔子在整郑国东门，子贡问郑人打听孔子下落，郑人给子贡所说。打给你然史料出处或后人所臆造，然却深切的说明孔子周游列国不遇，境遇凄惨。
+
+> 作为大圣人，何以沦落如此，周游列国，而不为诸侯所遇？
+
+> 其实在楚国，楚昭王本来已经要重要并封地给孔子，结果被子西所劝阻，原话是这样的：“昭王将以书社地七百里封孔子。楚令尹子西曰：“王之使使诸侯有如子贡者乎？”曰：“无有。”“王之辅相有如颜回者乎？”曰：“无有。”“王之将率有如子路者乎？”曰：“无有。”“王之官尹有如宰予者乎？”曰：“无有。”“且楚之祖封于周，号为子男五十里。今孔丘述三王之法，明周召之业，王若用之，则楚安得世世堂堂方数千里乎？夫文王在丰，武王在镐，百里之君卒王天下。今孔丘得据土壤，贤弟子为佐，非楚之福也。”昭王乃止。其秋，楚昭王卒于城父。”。
+
+> 很显然，孔子的思想在那个时代是不可能被诸侯所接受。
+
+> 其一，礼乐崩溃，如用孔子诸侯不是给自己找麻烦，打自己的脸，所以儒家那套制度就不太适合诸侯。
+
+> 其二，孔子所游诸国，除楚外都是些小国，楚国当时也算未开化之地，首先僭越称王。这时候列强争斗，弱国需要强国以自保，强国需要强国强军以图王霸之业。孔子尊礼乐治乱可以，平天下成霸王职业却无能。相反这一时期，法家却可以强国，这一时期的法家人迭涌而出。
+
+> 其三，孔子所行乃是光明正大之道，这套理论如果用在列国之间，则显得过于迂腐。如宋襄公“不重伤,不擒二毛,不鼓不成列”，然结果却落得个身败重伤而亡，为后世添笑料。在尔虞我诈的时代，欲独善其身，下场不必好于此。
+
+> 显然，孔子那套道义并非错误，只是在那个列国纷争的时代不适用。但是我们看到后世的大一统王朝，如汉唐，以儒家为宗则图强繁荣。但是在乱世，儒家思想却一无所用。或者说在尔虞我诈的时候将仪礼，宋襄公的例子就摆在那，为后世所耻笑。
 
 ## 秦始皇姓氏小论
 
