添加地理志
添加地理志

--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -722,6 +722,8 @@ date: 2021-05-01 05:01:01
 
 > 春秋完成之后孔子又说：“知我罪我，其惟春秋”。概自孔子以事论政，所以有“知我罪我，其惟春秋”之说。 
 
+> 另明末清初著名学者、大思想家顾炎武《日知录》卷四之首所言：“鲁之春秋《春秋》不始于隐公。晋韩宣子聘鲁，观书于太史氏，见《易象》与《鲁春秋》，曰：“周礼尽在鲁矣，吾乃今知周公之德与周之所以王也。”盖必起自伯禽之封，以洎于中世。当周之盛，朝觐会同征伐之事皆在焉，故曰：周礼而成之者，古之良史也。自隐公以下，世道衰微，史失其官，于是孔子惧而修之，自惠公以上之文无所改焉，所谓“述而不作”者也。自隐公以下，则孔子以己意修之，所谓“作春秋”也。然则自惠公以上之《春秋》，固夫子所善而从之者也，惜乎其书之不存也。”亦颇有道理，也就是说隐公之前良是史多，所以之前的春秋内容很尽善尽美，所以孔子没必要再写，之后良史欠缺，所以孔子才作春秋。 只是后来因为一些原因（焚书和历代战乱），这部部分春秋遗失在历史当中，也许有一天我们通过考古发觉还能找到，亦未可知。顾炎武的这个观点我也是赞同的。
+
 ## 上古之帝高寿问题随谈
 
 > 按竹书纪年，黄帝轩辕氏在为一百余年，帝颛顼高阳氏七十八年，帝喾高辛氏六十三年，帝尧陶唐氏在位一百多年，帝舜有虞氏在位五十年。
