--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -14,6 +14,7 @@ date: 2021-05-01 05:01:01
 - [谈孔子何以“累累若丧家之狗”](#谈孔子何以累累若丧家之狗)
 - [秦始皇姓氏小论](#秦始皇姓氏小论)
 - [唐太宗李世民](#唐太宗李世民)
+  - [仪礼的核心-五服制度](#仪礼的核心-五服制度)
 - [关中人说](#关中人说)
 - [告天下父母书](#告天下父母书)
 - [儿子现在的问题](#儿子现在的问题)
@@ -235,6 +236,34 @@ date: 2021-05-01 05:01:01
 > 惟于玄武门射杀兄弟，后又诛杀侄子，虽属无奈，可谓缺点。
 
 > 晚年又两废太子承乾，可谓教子无方。
+
+
+### 仪礼的核心-五服制度
+
+>  “五服”最早见《尚书》《禹贡》篇，曰：甸服，侯服，绥服，要服，荒服。
+
+>  《尚书》《康诰》篇中周人又五服为称侯、甸、男、采、卫为五服。五服由内而外逐级管理，不同的“服”有不同的义务和权利。上面这个是以天子为中心的五服制度。除此还有以老百姓为中心的五服制度。这“五服”的丧衣也不太一样。
+
+>  而中国封建社会以父宗为重。其亲属范围包括自高祖以下的男系后裔及其配偶，至玄孙的九世代，通称为九族。亲者服重，疏者服轻，依次递减，《礼记》《丧服小记》篇所谓“上杀、下杀、旁杀”即此意。服制按服丧期限及丧服粗细的不同，分为五种。
+
+>  五服中各服为天子或者出世者服丧有五种丧服。斩衰，齐衰，大功，小功，缌麻。《仪礼》 丧服第十一中详细记录了这五种丧服。
+
+>  斩衰（音摧），衰通“缞”，五服中最重，用最粗的生麻布制布制做，断处外露不缉边，丧服上衣叫“衰”，因称“斩衰”，表示毫不修饰以尽哀痛，服期三年。
+
+>  齐衰（音资崔，zīcuī ，齐通纃，衰通缞），齐，下衣的边，次于“斩衰”的丧服。用粗麻布制做，其服以粗疏的麻布制成，衣裳分制，断处缉边，缘边部分缝缉整齐，有别于斩衰的毛边，故名“齐衰”，视与死者关系亲疏而服期分三年、一年、九月、五月、三月。
+
+>  大功亦称“大红”，是次于“齐衰”的丧服。用粗熟麻布制作。服期为九个月。
+
+>  小功，亦称“上红”，用稍粗熟麻布制成。服期五月。
+
+>  缌麻（缌音思），是次于“小功”的丧服，“五服”中最轻的一种。用较细熟麻布制成，做功也较“小功”为细，服期三月。
+
+>  出五服的意思是：亲属关系超过五代，不再为之服丧，叫做出服，也叫出五服，在婚嫁中出五服即可通婚，同六世祖的亲属便是无服亲了。《礼记》《大传》篇曰：“四世而缌，服之穷也，五世袒免，杀同姓也，六世亲属竭矣。” 
+
+>  五服之外，同五世祖的亲属为袒免亲，即所谓“素服”，袒是露左臂，免是用布从项中向前交于额上，又后绕于髻。《礼记》《檀弓》篇中就有这样一个故事：公仪仲子之丧．檀弓免焉。公仪仲子不立嫡孙为继承人，却立了妾生的庶子，檀弓以免礼表示反对。
+
+>  《丧服》篇所载亲属间各种服制被后世奉为权威性的准则，历代遵行，但也有所变通。比如在农村，基本上都是亲属服斩衰，其他则素服既可，甚至城市中已经没有丧服了，只佩戴丧事袖章。总之，古人之礼适时而减，符合当下才是最好的。
+
 
 ## 关中人说
 
