--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -56,7 +56,9 @@ date: 2021-05-01 05:01:01
 - [浅谈春秋之微言大义](#浅谈春秋之微言大义)
 - [关于《左传》占卜只变一爻](#关于左传占卜只变一爻)
 - [晋文公请隧](#晋文公请隧)
-- [中国古代的学校与大小学](#中国古代的学校与大小学)
+- [西周迁都问题（未）](#西周迁都问题未)
+- [随谈秦国人殉](#随谈秦国人殉)
+- [中国古代的学校与大小学（未完）](#中国古代的学校与大小学未完)
   - [未整理](#未整理)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
@@ -236,7 +238,6 @@ date: 2021-05-01 05:01:01
 > 惟于玄武门射杀兄弟，后又诛杀侄子，虽属无奈，可谓缺点。
 
 > 晚年又两废太子承乾，可谓教子无方。
-
 
 ### 仪礼的核心-五服制度
 
@@ -843,7 +844,32 @@ date: 2021-05-01 05:01:01
 
 > 按照孔子的观点，显然周襄王的做法是对的。但是周朝就是因为不断的把土地分封出去，结果到了东周的时候，王室居然沦落为小诸侯国，只成为名义上的天下，和保守着礼制的尊主，但是这又有什么用呢?可见夫子的观点在那个时代很难行得通，也解释了孔子周游列国而不遇。
 
-## 中国古代的学校与大小学
+## 西周迁都问题（未）
+
+兵
+程邑（今陕西咸阳市东）
+
+## 随谈秦国人殉
+
+> 人言“虎狼之秦”，“暴秦”，秦公一号大墓，出土一百多具人殉一下子让“暴秦”显得更加名副其实。
+
+> 应劭汉书注曰：秦穆与群臣饮酒，酒酣，公曰：生共此乐，死共此哀。奄息等许诺。及公薨，皆从死。“三良”，是指秦国的三位贤臣子车氏三子：奄息、仲行、针虎。穆公死时，还要“三良”一起殉葬于地下。秦人写了《黄鸟》哀悼三良。但是从中可见三良其实是自愿殉葬穆公。从这点记载可见，秦国的人殉还是自愿为主。
+
+> 秦国的人殉制度肇始于秦武公二十年（公元前678年）。《史记•秦本纪》载：“武公卒，葬雍平阳。初以人从死，从死者六十六人。”
+
+> 《史记·秦本纪》载秦献公元年“止从死”,为什么叫从死？这其中可以看到之前实行的是从死制度，太史公为什么没有写“止殉死”之类？可见这时候实现的不过是从死，从三良来说是自愿的意思，因此叫“从死”，与现在说的殉葬不同。而且在秦公一号大墓中这些人殉还有不同规格的棺材，甚至有些陪葬品，显然秦国这种陪葬制度与现在所谓的殉葬，杀殉制度有着截然不同。并且，秦后期开始以陶俑代替人殉。秦兵马俑便是真实的例子，现在世界知名。
+
+> 再看看春秋战国时期其他的例子，盗墓者掘开晋幽公的陵墓，见其内有百余具殉葬者，横相枕藉，尸体未腐，除一男子之外，全部是女子。《史记·晋世家》记载：“幽公淫妇人，夜窃出邑中，盗杀幽公。”可见其他晋公也必有大量人殉。《史记•齐太公世家》注引《括地志》云，齐桓公墓中殉人“骸骨狼藉”。显然齐桓公墓中殉葬的人数不在少数，并且应该是被活埋的，极为残忍。
+
+> 与齐桓公墓中”骸骨狼藉“比起来，秦宫一号墓地中的殉人则整整齐齐排列。现在有兴趣的还可以去宝鸡先秦陵园博物馆看看。
+
+> 《墨子·节葬下》中说：“天子杀殉，众者数百，寡者数十；将军大夫杀殉，众者数十，寡者数人。舆马女乐皆具。……此为辍民之事，靡民之财，不可胜计也。”推而广之则在那个时期人殉普遍存在。
+
+> 再看近世，明太祖驾崩之后，明太祖死后，未生育的妃子全部被杀殉，至于数量就值得商榷了，但那绝对不会低。自汉唐之后殉葬制度停止了一千多年却在明代被复活，但是现在好多人却在大褒明太祖英明神武。但是我们现在的历史学家确不提，而凡提到暴，那必定得跟秦占不上边。
+
+> 秦的功绩一概被抹杀，唯独其“暴”的一面生生世世被印在教科书中，教给子孙后代。唯独秦所创建两千多年残酷的帝制被保留，但后世帝王却步着秦帝国的步子。
+
+## 中国古代的学校与大小学（未完）
 
 > 2023-04-18 16:16
 
