--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -861,11 +861,11 @@ date: 2021-05-01 05:01:01
 
 > 再看看春秋战国时期其他的例子，盗墓者掘开晋幽公的陵墓，见其内有百余具殉葬者，横相枕藉，尸体未腐，除一男子之外，全部是女子。《史记·晋世家》记载：“幽公淫妇人，夜窃出邑中，盗杀幽公。”可见其他晋公也必有大量人殉。《史记•齐太公世家》注引《括地志》云，齐桓公墓中殉人“骸骨狼藉”。显然齐桓公墓中殉葬的人数不在少数，并且应该是被活埋的，极为残忍。
 
-> 与齐桓公墓中”骸骨狼藉“比起来，秦宫一号墓地中的殉人则整整齐齐排列。现在有兴趣的还可以去宝鸡先秦陵园博物馆看看。
+> 与齐桓公墓中“骸骨狼藉”比起来，“秦公一号”墓地中的殉人则整整齐齐排列。现在有兴趣的还可以去宝鸡先秦陵园博物馆看看。
 
 > 《墨子·节葬下》中说：“天子杀殉，众者数百，寡者数十；将军大夫杀殉，众者数十，寡者数人。舆马女乐皆具。……此为辍民之事，靡民之财，不可胜计也。”推而广之则在那个时期人殉普遍存在。
 
-> 再看近世，明太祖驾崩之后，明太祖死后，未生育的妃子全部被杀殉，至于数量就值得商榷了，但那绝对不会低。自汉唐之后殉葬制度停止了一千多年却在明代被复活，但是现在好多人却在大褒明太祖英明神武。但是我们现在的历史学家确不提，而凡提到暴，那必定得跟秦占不上边。
+> 再看近世，明太祖驾崩之后，明太祖死后，未生育的妃子全部被杀殉，至于数量就值得商榷了，但那绝对不会低。自汉唐之后殉葬制度停止了一千多年却在明代被复活，但是现在好多人却在大褒明太祖英明神武。但是我们现在的历史学家却不提，而凡提到暴，那必定得跟秦占不上边。
 
 > 秦的功绩一概被抹杀，唯独其“暴”的一面生生世世被印在教科书中，教给子孙后代。唯独秦所创建两千多年残酷的帝制被保留，但后世帝王却步着秦帝国的步子。
 
