--- a/_poetrys/2022-09-08-望圭峰山.md
+++ b/_poetrys/2022-09-08-望圭峰山.md
@@ -4,12 +4,12 @@ title: 望圭峰山
 date: 2022-09-08 07:59:00
 ---
 
-圭峰高耸入云间，
+> 圭峰高耸入云间，
 
-脚下（日照）长安一片天。
+> 脚下（日照）长安一片天。
 
-古往今来兴与衰，
+> 古往今来兴与衰，
 
-而今还看新西安！
+> 而今还看新西安！
 
 ### 环山路遥望圭峰山所叹
